
0.9.11g Nov 19, 2006
 * Added FAQ entry describing CHECKSUMS.md5, PACKAGES.TXT, and package_data (Per)
 * fixed bug in incorrectly detecting requirements on package removal
 * added Turkish translation by Bekir SONAT 
 * updated download callback data structure making more informative
   download statistics possible.
 * updating package sort to also sort by location
 * extended configuration api
 * improved worst case lookup time for searching packages on package lists
   that are known to be sorted.
 * fixed crash bug in is_required_by (thanks to MacIver and Larhzu)

0.9.11f Oct 03, 2006
 * slack 11 release
 * added zenwalk example source
 * man page updates by Piotr
 * Makefile now uses the same Group ID of /usr/sbin on the system
   for Slack 11 compatibility (Thanks Ricardo Garcia).
 * fixed encoding issue with pt_PT

0.9.11e Jul 29, 2006
 * show disk space warning *after* showing how much is to be downloaded
 * suppress the warning when opening the ChangeLog.txt fails
   (for installed packages)
 * --remove-obsolete now works with --remove as well as --dist-upgrade
 * added support for downloading compressed ChangeLog.txt.gz
 * updated Polish translation with small updates from Lukasz Stlmach
 * updated documentation (thanks sky@hi.eclipse.co.uk)
 * updated German translation
 * updated FAQ
 * updated pt_PT translation
 * updated japanese translation

0.9.11d May 28, 2006
 * fixed regression in parsing versions in dependencies

0.9.11c May 25, 2006
 * added ChangeLog.txt downloading, --show now shows the changelog entry if present
 * updated patterns to fix version parsing problem with
   apache-1.3.35-i486-2_slack10.2
 * updated zh_CH translation from Yang
 * added http://www.slackware.com/~alien/slackbuilds/ to example.slapt-getrc
 * updated UK and RU translations from Sin
 * simplified Chinese translation by Yang
 * FAQ and FAQ.html updates from Piotr
 * added Japanese translation from S_A
 * updated Portugal translation from Miguel

0.9.11b Feb 19, 2006