@@ -1,5 +1,7 @@
 
 0.9.11g Nov 19, 2006
+ * updated FAQ#18 "How can I download every package in a disk set?" with custom
+   disk-set examples (Per).
  * Added FAQ entry describing CHECKSUMS.md5, PACKAGES.TXT, and package_data (Per)
  * fixed bug in incorrectly detecting requirements on package removal
  * added Turkish translation by Bekir SONAT 
